2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c (clutter_actor_set_property): Use the
	internal setter for the rotation center.

2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.[ch]: Add units based variant of the
	rotation accessors.

2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 892 - Incorrect results using rotation-[center|angle] properties

	* clutter/clutter-actor.c:
	(clutter_actor_set_rotation_internal): Inline function for setting
	the rotation using fixed point for the angle and units for the
	center of rotation.

	(clutter_actor_set_property),
	(clutter_actor_set_rotationx): Use the internal setter to avoid
	loss of precision and too many conversions to and from units.

2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 891 - assertion failed when test-behave exits

	* clutter/clutter-behaviour.c:
	(remove_actor_on_destroy),
	(clutter_behaviour_apply),
	(clutter_behaviour_remove): Remove the actor if it gets
	destroyed before the behaviour.

2008-04-18  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug #884 - Add clutter_alpha_set_closure

	* clutter/clutter-alpha.[ch]: Add clutter_alpha_set_closure(),
	a GClosure variant of clutter_alpha_set_func(), and reimplement
	the latter as a special case of the former. (#884, Xan López)

2008-04-18  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-timeline.c (clutter_timeline_get_progressx):
	Changed to use clutter_qdiv instead of CLUTTER_FIXED_DIV otherwise
	it can't cope with timelines with more than 255 frames.

2008-04-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-frame-source.c: Small coding style fixes.

2008-04-17  Neil Roberts  <neil@o-hand.com>

	Applied patch from bug #881

	* clutter/clutter-frame-source.h: 
	* clutter/clutter-frame-source.c:
	New files that contain a replacement for g_timeout that try to
	cope with system delays.

	* clutter/Makefile.am: Added clutter-frame-source.{c,h}
